# digikey-api

./: .coveragerc  .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  test_production.py
.github/workflows/: release.yml
debian/: README.Debian  changelog  control  copyright  watch
digikey/: __init__.py  api.py  client.py  configfile.py  constants.py  decorators.py  exceptions.py  models.py  oauth2.py  server.pem  utils.py
digikey/oauth/: oauth2.py
digikey/v2/: api.py  client.py  directives.py
digikey/v3/: api.py  product_information_client.py
digikey/v3/batchproductdetails/: __init__.py  api_client.py
digikey/v3/marketplace/: __init__.py  api_client.py  configuration.py  rest.py
digikey/v3/ordersupport/: __init__.py  api_client.py  configuration.py  rest.py
digikey/v3/productinformation/: __init__.py  api_client.py  configuration.py  rest.py
digikey/v4/: api.py
digikey/v4/batchproductdetails/: configuration.py  rest.py
digikey/v4/ordersupport/: rest.py
digikey/v4/productinformation/: __init__.py  api_client.py  rest.py  (+1 more)
docs/: DigikeyBaseConfig.md
generate-v3-api/: generage_client_swagger.py
kicost_digikey_api_v3/: __init__.py  utils.py
kicost_digikey_api_v3/certauth/: certauth.py
kicost_digikey_api_v3/oauth/: oauth2.py
kicost_digikey_api_v3/v3/: api.py
swagger/: Orders.json  README.md
tests/: fixtures.py  test_oauth2.py  utils.py
tests/responses/: keywordsearch_response.json  oauth2_response.json
tools/: test_config.py  user_agent.py
(+214 files in other folders)
