[aliases]
test=nosetests

[flake8]
exclude = .git,venv,tests/fixtures.py
max-complexity = 10

[bumpversion]
current_version = 0.2.1
commit = True
tag = True
tag_name = {new_version}
message = Release {new_version}

[bumpversion:file:setup.py]
search = version="{current_version}"
replace = version="{new_version}"

[metadata]
description-file = README.md